--- a/item/templates/inhouse/component_update.html
+++ b/item/templates/inhouse/component_update.html
@@ -5,7 +5,7 @@
 {% block panel_title %}
   <i class="bi bi-box-fill inhouse-text-color"></i> Update Component
 {% endblock panel_title %}
-{% block update_form %}
+{% block object_form %}
   <div class="px-3 pt-3">
     <span class="text-danger small">{{ form.non_field_errors }}</span>
     <div class="input-group mb-3">
@@ -30,4 +30,4 @@
       </div>
     </div>
   </div>
-{% endblock update_form %}
+{% endblock object_form %}
