--- a/item/templates/watchlist/watchlist_list.html
+++ b/item/templates/watchlist/watchlist_list.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row d-none d-lg-flex text-muted fw-bold align-items-center border-bottom ">
-    <div class="col-lg-3">Item</div>
+    <div class="col-lg-3">Source</div>
     <div class="col-lg-2">Product ID</div>
     <div class="col-lg-2">Lot Number</div>
     <div class="col-lg-2">Remaining</div>
