--- a/templates/userguide.html
+++ b/templates/userguide.html
@@ -66,6 +66,7 @@
               <li>
                 <a href="#">Add a new supplier or manufacturer company</a>
               </li>
+              <li>Search</li>
             </ol>
           </li>
         </ol>
