--- a/templates/help/location_detail.html
+++ b/templates/help/location_detail.html
@@ -1,1 +1,11 @@
-company detail help
+<ul>
+  <li class="pb-2">This is the location detail page.</li>
+  <li class="pb-2">
+    Click the
+    <button class="btn btn-sm btn-success">
+      <i class="bi bi-pencil-square"></i>
+      <span class="d-none d-sm-inline">Edit</span>
+    </button>
+    button to edit the location.
+  </li>
+</ul>
