--- a/templates/help/location_update.html
+++ b/templates/help/location_update.html
@@ -5,7 +5,7 @@
     The description of the location is optional. However, it is recommended to provide a description to help improve searchability.
   </li>
   <li class="pb-2">
-    To create a new location, enter the name, room and description in the form and click the
+    Update the relevant fields in the form and click the
     <button class="btn btn-sm btn-success">
       <i class="bi bi-floppy"></i> Save
     </button>
