some help pages

--- a/templates/help/item_create.html
+++ b/templates/help/item_create.html
@@ -1,1 +1,32 @@
-item create
+<p>To create a new item, fill out the form fields with the required information.</p>
+<ul>
+  <li class="pb-2">Enter the item name in the <i class="fw-bold">Name</i> field.</li>
+  <li class="pb-2">Enter the product ID in the <i class="fw-bold">Product ID</i> field.</li>
+  <li class="pb-2">
+    Enter the CAS number in the <a href="https://www.cas.org/support/documentation/chemical-substances/faqs"
+    target="_blank"
+    class="fw-bold border-bottom">CAS number</a> field, if applicable.
+    CAS numbers are unique identifiers for chemical compounds. They help distinguish between different compounds with very similar names.
+  </li>
+  <li class="pb-2">Enter the quantity and select the appropriate unit in the <i class="fw-bold">Quantity</i> and <i class="fw-bold">Quantity Unit</i> fields.</li>
+  <li class="pb-2">
+    To assign a category, start typing in the <i class="fw-bold category-text-color">Category</i> search box to find an existing category. If the category does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to create a new category.
+  </li>
+  <li class="pb-2">
+    To assign a manufacturer, start typing in the <i class="fw-bold manufacturer-text-color">Manufacturer</i> search box to find an existing manufacturer. If the manufacturer does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to create a new manufacturer.
+  </li>
+  <li class="pb-2">
+    To assign a supplier, start typing in the <i class="fw-bold supplier-text-color">Supplier</i> search box to find an existing supplier. If the supplier does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to create a new supplier.
+  </li>
+  <li class="pb-2">
+    Enter a description in the <i class="fw-bold">Description</i> field to provide additional details about the item.
+  </li>
+  <li class="pb-2">
+    Click the
+    <button class="btn btn-sm btn-success">
+      <i class="bi bi-floppy"></i> Save
+    </button>
+    button to save the new item.
+  </li>
+  <li class="pb-2">Correct any errors that occur and save again.</li>
+</ul>
