--- a/templates/help/stock_create.html
+++ b/templates/help/stock_create.html
@@ -1,3 +1,37 @@
-<div class="panel">
-  enter the item name and the quantity of the item you want to add to the stock
-</div>
+<p>
+  When a reagent item arrives, a <i class="fw-bold stock-text-color">stock</i> can be created. Alternatively, when a new batch of in-house reagent is made, a stock can be created.
+  <i class="fw-bold stock-text-color">Stock</i> is a <i>'container'</i> for the reagent item or in-house reagent.
+</p>
+<ul>
+  <li class="pb-2">
+    Start typing in the <i class="fw-bold item-text-color">item</i> or <i class="fw-bold inhouse-text-color">In-house reagent</i> box to search for an existing reagent.
+    If the reagent does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to open a new window and create a new reagent.
+  </li>
+  <li class="pb-2">
+    Enter the lot number. For in-house reagents, this is often the date when the reagent is made in <i class="fw-bold">ddmmyyyy</i> format.
+  </li>
+  <li class="pb-2">
+    Enter the delivery date. For in-house reagents, this is the date when you commit it to the stocks.
+  </li>
+  <li class="pb-2">Select the condition of the stock.</li>
+  <li class="pb-2">
+    Add any necessary comments. For example, if the condition of the stock is not <i class="fw-bold">Good</i>, you can write a brief description here.
+  </li>
+  <li>Enter an expiry date according to the commercial reagents or the SOP for in-house reagents.</li>
+  <li class="pb-2">Enter the quantity received/created.</li>
+  <li class="pb-2">
+    Type in the <i class="fw-bold location-text-color">location</i> box to enter where the stock will be stored.
+    If the stock needs to be stored in multiple locations, enter one location first, save, and then edit each individual stock entry to add the other locations.
+  </li>
+  <li class="pb-2">
+    If a location does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to open a new window and create a new entry.
+  </li>
+  <li class="pb-2">
+    Click
+    <button class="btn btn-sm btn-success">
+      <i class="bi bi-floppy"></i> Save
+    </button>
+    to save and continue.
+  </li>
+  <li class="pb-2">Correct any errors that occur and save again.</li>
+</ul>
