--- a/templates/help/inhouse_create.html
+++ b/templates/help/inhouse_create.html
@@ -1,1 +1,24 @@
-company create
+<p>
+  To create a new in-house reagent, fill out the form fields with the required information.
+</p>
+<ul>
+  <li class="pb-2">Enter the reagent name in the <i class="fw-bold">Name</i> field. start typing in the <i class="fw-bold">Name</i> box to find an existing reagent.</li>
+  <li class="pb-2">Enter the product ID in the <i class="fw-bold">Product ID</i> field.</li>
+  <li class="pb-2">Enter the lot number, usually the creation date in <b>ddmmyyyy</b> format, in the <i class="fw-bold">Lot Number</i> field.</li>
+  <li class="pb-2">Enter the expiry date according to the relevant SOP in the <i class="fw-bold">Expiry Date</i> field.</li>
+  <li class="pb-2">Enter the quantity and select the appropriate unit in the <i class="fw-bold">Quantity</i> and <i class="fw-bold">Quantity Unit</i> fields.</li>
+  <li class="pb-2">
+    To assign a category, start typing in the <i class="fw-bold category-text-color">Category</i> box to find an existing category. If the category does not exist, click on the <i class="bi bi-plus-circle text-success"></i> button to create a new category.
+  </li>
+  <li class="pb-2">
+    Enter a description in the <i class="fw-bold">Description</i> field to provide additional details about the reagent.
+  </li>
+  <li class="pb-2">
+    Click the
+    <button class="btn btn-sm btn-success">
+      <i class="bi bi-floppy"></i> Save
+    </button>
+    button to save the new in-house reagent.
+  </li>
+  <li class="pb-2">Correct any errors that occur and save again.</li>
+</ul>
