--- a/templates/userguide.html
+++ b/templates/userguide.html
@@ -5,72 +5,8 @@
 {% endblock title %}
 {% block content %}
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3 class="py-3" id="userguide-top">ReagenTree - User Guide</h3>
-        <ol>
-          <li>
-            <a href="#reagentree-intro">Introduction</a>
-          </li>
-          <li>
-            <a href="#user-account">User account</a>
-            <ol>
-              <li>
-                <a href="#user-registration">Registration</a>
-              </li>
-              <li>
-                <a href="#user-login">Login</a>
-              </li>
-              <li>
-                <a href="#user-logout">Logout</a>
-              </li>
-              <li>
-                <a href="#account-previleges">Account previleges</a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            <a href="#model-concept">Data Models</a>
-            <ol>
-              <li>
-                <a href="#item-model">Item</a>
-              </li>
-              <li>
-                <a href="#reagent-model">Reagent (in-house reagent)</a>
-              </li>
-              <li>
-                <a href="#stock-model">Stock</a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            Settings
-            <ol>
-              <li>
-                <a href="#company-setting">Companies</a>
-              </li>
-              <li>
-                <a href="#category-setting">Categories</a>
-              </li>
-              <li>
-                <a href="#location-setting">Locations</a>
-              </li>
-              <li>
-                <a href="#userprofile-setting">User profile settings</a>
-              </li>
-            </ol>
-          </li>
-          <li>
-            How to
-            <ol>
-              <li>
-                <a href="#">Add a new supplier or manufacturer company</a>
-              </li>
-              <li>Search</li>
-            </ol>
-          </li>
-        </ol>
-      </div>
+    <div class="text-center">
+      <h3 class="py-3" id="userguide-top">User Guide</h3>
     </div>
     <div class="row">
       <div class="col-md-12">
