--- a/templates/partials/navbar_menu_end.html
+++ b/templates/partials/navbar_menu_end.html
@@ -30,7 +30,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:"><i class="bi bi-person-fill user-text-color"></i> User</a>
+       href="javascript:"><i class="bi bi-person-fill user-text-color"></i> {{ request.user.first_name }}</a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
       <li>
         <div class="text-center">
