--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,11 @@
     <footer>
       <!-- Footer content goes here -->
       {% block footer %}
+        <footer class="footer mt-auto p-5">
+          <div class="container text-center">
+            <span class="text-muted">ReagenTree © 2024 - <a href="https://www.oxfordgenes.com" title="Visit OxfordGenes.com">OxfordGenes</a></span>
+          </div>
+        </footer>
       {% endblock footer %}
     </footer>
     {% block offcanvas %}
