--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -13,7 +13,7 @@
   <div class="container-fluid pt-3">
     <!-- Headers -->
     <div class="row mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
-      <div class="col-2">
+      <div class="col-3">
         {% with current_sort=request.GET.sort_by|default:'name' current_order=request.GET.order|default:'asc' %}
           {% if current_sort == 'name' and current_order == 'asc' %}
             <a href="?sort_by=name&order=desc">Company <i class="bi bi-arrow-up"></i></a>
@@ -21,32 +21,28 @@
             <a href="?sort_by=name&order=asc">Company <i class="bi bi-arrow-down"></i></a>
           {% endif %}
         {% endwith %}
-      </div>      
+      </div>
       <div class="col-2">Phone</div>
       <div class="col-2">Email</div>
-      <div class="col-2">Website</div>
-      <div class="col-3">Description</div>
+      <div class="col-4">Description</div>
       <div class="col-1 text-end">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
     </div>
     <!-- Rows for Each Company -->
     {% for company in companies %}
       <div class="row py-1 border-top align-items-center {% if forloop.counter0|divisibleby:2 %}bg-light{% else %}bg-white{% endif %}">
         <!-- Company Name -->
-        <div class="col-6 col-lg-2 align-middle">
+        <div class="col-6 col-lg-3 align-middle">
           <a href="{{ company.get_absolute_url }}">{{ company.name }}</a>
-        </div>        
+          {% if company.website|length %}
+            <a href="{{ company.website }}" class="ps-3" title="Visit {{ company.website }}" target="_blank"><i class="bi bi-link-45deg company-text-color"></i></a>
+          {% endif %}
+        </div>
         <!-- Phone -->
         <div class="col-lg-2 d-none d-lg-block">{{ company.phone }}</div>
         <!-- Email -->
         <div class="col-lg-2 d-none d-lg-block">{{ company.email }}</div>
-        <!-- Website -->
-        <div class="col-lg-2 d-none d-lg-block">
-          <a href="{{ company.website }}"
-             title="Visit {{ company.website }}"
-             target="_blank">{{ company.website|truncatechars:32 }}</a>
-        </div>
         <!-- Description -->
-        <div class="col-lg-3 d-none d-lg-block small">{{ company.description|truncatechars:32 }}</div>
+        <div class="col-lg-4 d-none d-lg-block small">{{ company.description|truncatechars:32 }}</div>
         <!-- Actions -->
         <div class="col-lg-1 d-none d-lg-block text-end">
           <span class="tooltray-container d-none">
