removed redundant js confirm function

--- a/templates/object_update_base.html
+++ b/templates/object_update_base.html
@@ -20,7 +20,7 @@
             <div class="text-end pe-3">
               <button type="submit"
                       class="btn btn-sm btn-success"
-                      onclick="return confirmationDialog('Do you want to save the changes?');">
+                      onclick="return confirm('Do you want to save the changes?');">
                 <i class="bi bi-floppy"></i> Save
               </button>
             </div>
