item attachment list view

--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -37,6 +37,9 @@
       <li>
         <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-boxes item-text-color"></i> All items</a>
       </li>
+      <li>
+        <a href="{% url 'item_attachment_list' %}?q=SDS" class="dropdown-item"><i class="bi bi-file-earmark-pdf text-danger"></i> Attachments</a>
+      </li>   
       <li class="dropdown-divider"></li>
       <li class="dropdown-header">
         <span class="inhouse-text-color">Inhouse Reagents</span>
