--- a/templates/help/homepage.html
+++ b/templates/help/homepage.html
@@ -28,3 +28,18 @@
     Once an item has been restocked, click on the trolley icon <i class="bi bi-cart-plus"></i> to acknowledge and disable the restock alert.
   </div>
 </div>
+<div class="panel">
+  <div class="panel-heading">
+    <i class="bi bi-search text-primary"></i> Search Box
+  </div>    
+  <div class="panel-content">
+    In the search box, type in any text to search for 
+    <b class="stock-text-color">Stocks</b>, 
+    <b class="inhouse-text-color">Inhouse reagents</b>, 
+    <b class="item-text-color">Items</b>, 
+    <b class="company-text-color">Companies</b>,
+    <b class="location-text-color">Locations</b> and 
+    <b class="category-text-color">Categories</b>. 
+    To narrow down the search results, type in more search terms separated by a space.
+  </div>
+</div>
