--- a/templates/help/inhouse_detail.html
+++ b/templates/help/inhouse_detail.html
@@ -1,1 +1,35 @@
-company detail help
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-info-circle-fill inhouse-text-color"></i> Reagent Details</span>
+  </div>
+  <div class="panel-content">
+    <p>
+      Click the
+      <button class="btn btn-sm btn-success">
+        <i class="bi bi-pencil-square"></i>
+        <span class="d-none d-sm-inline">Edit</span>
+      </button>
+      button to edit stock details.
+    </p>
+  </div>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-menu-button-wide-fill text-danger"></i> Reagent Components</span>
+  </div>
+  <div class="panel-content">
+    <p>
+      To add components to the reagent, click the
+      <button class="btn btn-success btn-sm">
+        <i class="bi bi-plus-circle"></i> Add
+      </button> button to bring up the component form.
+    </p>
+    <p>
+      Start typing in the <b>Stock:</b> search box to find the stock item to add as a component.
+    </p>
+    <p>Enter the correct quantity and unit, and save the entry.</p>
+    <p>
+      Click the <i class="bi bi-tools fw-bold text-gray-500"></i> icon to display the <i class="bi bi-pencil-square"></i> and <i class="bi bi-trash" title="Delete validation"></i> buttons.
+    </p>
+  </div>
+</div>
