--- a/templates/help/stock_detail.html
+++ b/templates/help/stock_detail.html
@@ -1,1 +1,85 @@
-stock detail help
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-info-circle-fill stock-text-color"></i> Stock Details</span>
+  </div>
+  <div class="panel-content">
+    <p>
+      Click the <i class="bi bi-eye-slash text-black text-opacity-25"></i> icon to set a stock level warning threshold.
+    </p>
+    <p>
+      Hover over the <i class="bi bi-eye stock-text-color"></i> icon to view the set threshold value.
+      Click the <i class="bi bi-eye stock-text-color"></i> to confirm the deletion of the set threshold.
+    </p>
+    <p>
+      A warning threshold can only be set or deleted, so if a different threshold is needed instead of the one currently set. Delete it first and then create a new one.
+    </p>
+    <p>
+      Click the
+      <button class="btn btn-sm btn-success">
+        <i class="bi bi-pencil-square"></i>
+        <span class="d-none d-sm-inline">Edit</span>
+      </button>
+      button to edit stock details.
+    </p>
+    <p>
+      <b>Please note:</b> the source of the stock is not editable.
+      If a stock source needs to be changed, create a new stock item and delete the incorrect one.
+    </p>
+  </div>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-folder2-open text-warning"></i> Documents</span>
+  </div>
+  <div class="panel-content">
+    <p>
+      Upload any stock-related documents using the
+      <button class="btn btn-sm btn-success">
+        <i class="bi bi-file-earmark-arrow-up"></i> Upload
+      </button>
+      button.
+    </p>
+    <p>
+      Click the <i class="bi bi-tools fw-bold text-gray-500"></i> icon to display the <i class="bi bi-pencil-square"></i> and <i class="bi bi-trash" title="Delete validation"></i> buttons.
+    </p>
+  </div>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-clipboard-check-fill validation-text-color"></i> Validations</span>
+  </div>
+  <div class="panel-content">
+    <p>
+      To add a validation record for the stock, click the
+      <button class="btn btn-success btn-sm">
+        <i class="bi bi-plus-circle"></i> Add
+      </button>
+      button.
+    </p>
+    <p>
+      Any user can add, edit, or remove a validation record.
+      Click the <i class="bi bi-tools fw-bold text-gray-500"></i> icon to display the <i class="bi bi-pencil-square"></i> and <i class="bi bi-trash" title="Delete validation"></i> buttons.
+    </p>
+    <p>
+      Only administrators can authorise a validation record. To authorise, click the <i class="bi bi-pen-fill text-danger"></i> icon and confirm the action.
+    </p>
+    <p>
+      <b>Please note:</b> only validated stock items or those marked as validation not required can be used to create a reagent.
+    </p>
+  </div>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <span class="fw-bold"><i class="bi bi-boxes stock-text-color"></i> Stock Entries</span>
+  </div>
+  <div class="panel-content">
+    <p>This section lists all entries belonging to this stock.</p>
+    <p>
+      Click the <i class="bi bi-qr-code"></i> icon to generate labels for printing.
+    </p>
+    <p>Double-click the quantity value to enter the usage quantity.</p>
+    <p>
+      To modify or delete a stock entry, click the <i class="bi bi-tools fw-bold text-gray-500"></i> icon to display the <i class="bi bi-pencil-square"></i> and <i class="bi bi-trash" title="Delete validation"></i> buttons.
+    </p>
+  </div>
+</div>
