--- a/templates/help/userguide.html
+++ b/templates/help/userguide.html
@@ -19,6 +19,9 @@
           <li>
             <a href="#account-previleges">Account previleges</a>
           </li>
+          <li>
+            <a href="#user-profile">User profile</a>
+          </li>
         </ol>
       </li>
       <li>
@@ -47,18 +50,6 @@
           <li>
             <a href="#location-setting">Locations</a>
           </li>
-          <li>
-            <a href="#userprofile-setting">User profile settings</a>
-          </li>
-        </ol>
-      </li>
-      <li>
-        How to
-        <ol>
-          <li>
-            <a href="#">Add a new supplier or manufacturer company</a>
-          </li>
-          <li>Search</li>
         </ol>
       </li>
     </ol>
