--- a/templates/partials/navbar_search_box.html
+++ b/templates/partials/navbar_search_box.html
@@ -15,7 +15,8 @@
                  placeholder="Search..."
                  autocomplete="off"
                  name="query"
-                 style="border-left: 0">
+                 style="border-left: 0"
+                 onfocus="this.select();">
         </div>
       </form>
     </div>
