--- a/templates/userguide_page.html
+++ b/templates/userguide_page.html
@@ -52,6 +52,13 @@
           If you find that you cannot perform certain actions, contact the administrator users to grant you the necessary permissions.
           <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
         </p>
+        <h5 id="user-profile">2.5. User profile</h5>
+        <p>
+          User profile information such as first name, last name, and email address can be viewed by clicking on the <a href="{% url 'user_profile' %}" class="text-success"><i class="bi bi-person-square"></i> Profile</a> option under the user menu.
+          To update your user profile information, click the <button class="btn btn-sm btn-success"><i class="bi bi-pencil-square"></i> Edit</button> button on the user profile page.
+          To show the password change form, click the <b class="text-secondary"><i class="bi bi-key"></i> Change password</b> link.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
         <h4 class="pt-3" id="model-concept">3. Data Models</h4>
         <h5 id="item-model">
           3.1. Item
@@ -107,20 +114,7 @@
           Each <i class="location-text-color fw-bold">location</i> has a searchable name and a description.
           <i class="location-text-color fw-bold">Locations</i> help in tracking and managing the physical storage of <i class="fw-bold stock-text-color">stock</i> items,
           <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
-        </p>
-        <h5 id="userprofile-setting">4.4. User profile settings</h5>
-        <p>
-          User profile information such as first name, last name, and email address can be updated by clicking on the <a href="{% url 'user_profile' %}" class="text-success"><i class="bi bi-person-square"></i> Profile</a> option under the user menu.
-          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
-        </p>
-        <h4 class="pt-3" id="how-to">5. How to</h4>
-        <h5>5.1. Add a new supplier or manufacturer company</h5>
-        <p>
-          To add a new company, click on the <a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New Company</a> button on the company page and fill in the company form.
-          The company form requires you to provide the company name and website.
-          Follow the instructions on the company form to complete the company creation process.
-          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
-        </p>
+        </p>        
       </div>
     </div>
   </div>
