--- a/user/templates/user/profile_edit.html
+++ b/user/templates/user/profile_edit.html
@@ -40,8 +40,8 @@
         <a data-bs-toggle="collapse"
            href="#passwordCollapse"
            title="Toggle password inputs"
-           class="small">
-          <i>change password</i> <i class="bi bi-arrow-down-short"></i>
+           class="small fw-bold text-secondary">
+           <i class="bi bi-key"></i> Change password
         </a>
       <div class="collapse" id="passwordCollapse">
         <hr>
