--- a/templates/help/helppage.html
+++ b/templates/help/helppage.html
@@ -1,5 +1,7 @@
-<div class="container-fluid p-3 small">
-  <h5 class="text-success pb-3">Help page</h5>
+<div class="offcanvas-header">
+  <h5 class="text-success">Help page</h5>
+</div>
+<div class="offcanvas-body small">
   {% if help_content %}
     {% include help_content %}
   {% endif %}
